2021-06-13  Sarthak Bhardwaj  <1sarthakbhardwaj@gmail.com>
            Anurag Thakur  <devanuragthakur@gmail.com>

	[ftlint] Render and calculate MD5 checksum.

	* src/ftlint.c (main): Handle the load flags and the render mode from
	the command line.
	(Checksum): Calculate MD5 sum.
	* src/md5.c, src/md5.h: MD5 source code.
	* Makefile, messon.build: Update the build systems.

2021-06-06  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Synchronize with the change made in the `sdf` renderer.

	* src/ftsdf.c (draw): Change logic to utilize 8bit SDF instead of 16.

2021-06-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.c (gblender_dump_stats): Fix the lookup rate.

2021-06-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grdevice.c (grDoneSurface) [GBLENDER_STATS]: Report stats.
	* graph/gblender.c (gblender_dump_stats): Improve formatting.

2021-05-29  Werner Lemberg  <wl@gnu.org>

	Fix compilation errors and (some) warnings for clang++.

	* graph/gblblit.c (GRGB5[56]5_TO_{RED,GREEN,BLUE}): Add casts.
	(GDST_STOREP): Use `while {} (0)`.
	* graph/gblender.h (GBLENDER_LOOKUP, GBLENDER_LOOKUP_[GBR]): Use
	`while {} (0)`.
	(GBLENDER_CLOSE, GBLENDER_CHANNEL_CLOSE): Remove final semicolon.
	* graph/grblit.c (compose_pixel_full): Use `while {} (0)`.
	(extract5[56]5): Remove final semicolon.
	(blit_gray8_to_24): Fix typo.
	* graph/grfont.c (font): Make it static.

	* src/ftcommon.c (FTDemo_Icon): Don't use obfuscating comma
	operator.
	* src/ftsdf.c (main): Move definition of `flip_y` before `goto`
	instructions.

2021-05-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Fix double-dealing of some keystrokes.

	* graph/grwin32.c (gr_win32_surface_listen_event): Deprioritize
	`TranslateMessage' to avoid double-dealing of Tab, Esc, Return.

2021-05-23  David Turner  <david@freetype.org>

	* src/ftmemchk.c: Remove minor compiler warning.

	Casting a pointer to (long) isn't always correct.

2021-05-23  David Turner  <david@freetype.org>
