@@ -1,3 +1,8 @@
+2021-06-14  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* bin/ftlint.c (main): Implement limited indexing.
+	(Usage): Document it.
+
 2021-06-13  Sarthak Bhardwaj  <1sarthakbhardwaj@gmail.com>
             Anurag Thakur  <devanuragthakur@gmail.com>
 
